--- a/cucumber.yml
+++ b/cucumber.yml
@@ -8,7 +8,7 @@ dot: --format progress
 
 #Ambiente pronto
 Ambiente_homolog: -p bdd  -p homolog -p json --publish-quiet
-Ambiente_Prod: -p bdd -p prod  -p json --publish-quiet
+Ambiente_Prod: -p bdd -p prod  -p json -p retry --publish-quiet
 
 #Qual site será testado
 prod: AMBIENTE=prod
@@ -18,6 +18,5 @@ homolog: AMBIENTE=homolog
 #Relatórios
 html: --format html --out=logs/html/relatorio.html
 json: --format json --out=logs/json/report.json
-jsonII: --format protobuf:cucumber-messages.bin cat cucumber-messages.bin | cucumber-json-formatter > cucumber-results.json
 #Repetir teste caso falhe
 retry: --retry 1
